xmobar/xmobar.errors

xmobar.hs:1:1: error:
    Could not find module ‘Prelude’
    There are files missing in the ‘base-4.12.0.0’ package,
    try running 'ghc-pkg check'.
    Use -v to see a list of the files searched for.
  |
1 | import Xmobar
  | ^

xmobar.hs:1:1: error:
    Could not find module ‘Xmobar’
    Use -v to see a list of the files searched for.
  |
1 | import Xmobar
  | ^^^^^^^^^^^^^
